# boilerplate_pg_fastapi_react

./: .env.dev  .gitignore  Dockerfile  README.md  docker-compose.yml  package-lock.json
.github/workflows/: backend_ci_on_pr_main.yml
backend/: .env.dev  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: __template__  env.py
backend/alembic/versions/: 0aab749d5340_.py  85e5c4427388_.py  a47cfed86db1_.py  d7552cd83390_generate_device_datbaase_schemas.py
backend/app/: main.py  models.py
backend/app/core/: database.py  utilities.py
backend/app/core/database/: database.py  models.py
backend/app/core/database/models/: models.py
backend/app/database/: database.py
backend/app/database/models/: mixins.py  models.py
backend/app/features/device/: __init__.py  device_controller.py  device_repository.py  device_service.py
backend/app/features/device/tests/: test_device_controller.py
backend/app/features/login/: __init__.py  login_controller.py  login_repository.py  login_service.py
backend/app/features/login/tests/: test_login_controller.py
backend/scripts/hooks/: pre-commit.sh
backend/tests/: test_main.py
frontend/: Dockerfile  package-lock.json  package.json  vite.config.ts
frontend/components/Right/: Right.tsx
frontend/src/: App.tsx  main.tsx
frontend/src/components/TabButton/: TabButton.tsx
frontend/src/components/filtered-table/: FilteredTable.component.tsx
frontend/src/models/: Device.ts  DeviceData.ts  DeviceDataResponse.ts  DeviceInfo.ts
frontend/src/store/: counterSlice.ts  store.ts
(+5 files in other folders)
