[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
alembic = "^1.13.1"
uvicorn = "^0.29.0"
sqlalchemy = "^2.0.29"
psycopg2-binary = "^2.9.9"
sqlmodel = "^0.0.16"
fastapi = "^0.110.0"
asyncpg = "^0.29.0"
python-multipart = "^0.0.9"
pytest = "^8.1.1"
anyio = "^4.3.0"
pytest-asyncio = "^0.23.6"
pytest-mock = "^3.14.0"


[tool.poetry.group.dev.dependencies]
debugpy = "^1.8.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
